feat: Creating a instance EC2 using CDKTF Python template

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-*.d.ts
-*.js
-node_modules
+dist/
+imports/*
+!imports/__init__.py
+.terraform
 cdktf.out
 cdktf.log
 *terraform.*.tfstate*
-.gen
-.terraform
-tsconfig.tsbuildinfo
-!jest.config.js
-!setup.js
+
+.env
